# SpyglassWorkshop2026

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  cspell.json  dj_local_conf_example.json  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup-db.sh
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  docs.yml
database/: README.md  docker-compose.yml  init.sh  store.sh
database/init/: 01_roles_users.sql  02_data.sql
docs/: README.md  mkdocs.yml
docs/src/: convert_slides.py  examples.md  index.md  session1_tools.md  session2_datajoint.md
docs/src/api/: index.md  make_pages.py
notebooks/: 01_tools_exercises.ipynb  01_tools_exercises.py  02_datajoint_spyglass.ipynb  02_datajoint_spyglass.py  example.ipynb  example.py
notebooks/py_scripts/: 00_example.py  01_tools_exercises.py  02_datajoint_spyglass.py
src/spyglass_workshop/: __init__.py  adder_module.py  channel_stats_buggy.py  fibonacci.py  fibonacci_buggy.py  schema_template.py  utils.py
src/spyglass_workshop/examples/: fibonacci_buggy.py
tests/: test_channel_stats_buggy.py  test_channel_stats_helpers.py  test_fibonacci.py  test_fibonacci_buggy.py  test_utils.py  test_version.py
tests/examples/: test_fibonacci_buggy.py
