[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling>=1.26.3,<2" ]

[project]
name = "spyglass-workshop"
description = "Your project description here."
readme = "docs/src/index.md"
license = "MIT"
authors = [ { name = "Chris Broz" } ]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "coverage[toml]",   # test coverage measurement
  "jupytext",         # convert notebooks to python scripts
  "pre-commit",       # check files before
  "pytest>=8.1.1,<9", # testing framework
  "ruff>=0.15,<0.16", # linter and formatter
  "spyglass-neuro",   # ensure spyglass is installed
]
optional-dependencies.docs = [
  "mkdocs<2",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocstrings[python]",
]
urls.Homepage = "https://github.com/CBroz1/SpyglassWorkshop2026"
urls.Repository = "https://github.com/CBroz1/SpyglassWorkshop2026"

[tool.hatch.build.targets.sdist]
include = [ "src", "tests" ]

[tool.hatch.build.targets.wheel]
packages = [ "src/spyglass_workshop" ]

[tool.hatch.version]
path = "src/spyglass_workshop/__init__.py"

[tool.ruff]
line-length = 80
src = [ "src", "tests" ]
exclude = [
  # Jupytext-generated mirrors of notebooks
  "notebooks/py_scripts/",
  # Intentionally buggy — used as a debugging exercise; must not be auto-fixed
  "src/spyglass_workshop/channel_stats_buggy.py",
]

format.docstring-code-format = true
lint.extend-select = [ "I", "UP" ]
lint.ignore = [
  "E402", # unused import, which DataJoint tables require
  "F401", # import not at top of file, which is common in notebooks
]
lint.isort.known-first-party = [ "src", "tests" ]

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = [ "tests" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:", "pragma: no cover" ]
fail_under = 70
show_missing = true

[tool.coverage.run]
command_line = "-m pytest"
source_pkgs = [ "spyglass_workshop", "tests" ]
omit = [ "*/schema_template.py" ]  # requires a live database connection

[tool.coverage.paths]
spyglass_workshop = [ "src/spyglass_workshop" ]
tests = [ "tests" ]
